--- a/fmning/projects/project.css
+++ b/fmning/projects/project.css
@@ -1,4 +1,8 @@
 .container {
+    margin-top: 150px;
+}
+
+.short_pad_top {
     margin-top: 60px;
 }
 
@@ -10,8 +14,7 @@
     font-size: 7.5rem
 }
 
-.aspect-fill {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.fit-width {
+	width: 100%;
+	object-fit: contain;
 }
