--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lobster|Oswald:400,300,700|Vollkorn:700italic|Pacifico|Amatic+SC:400,700|Leckerli+One|Raleway:400,300,600,700,800,900|Pacifico);
+@import url(https://fonts.googleapis.com/css?family=Lobster|Oswald:400,300,700|Vollkorn:700italic|Pacifico|Amatic+SC:400,700|Leckerli+One|Raleway:400,300,600,700,800,900|Pacifico);
 [class*="entypo-"]:before {
     font-family: "entypo", sans-serif
 }
